compiler/tests/ar/errors/noret_rettype.salam
// لغة: العربية
// توقع: E012
لايرجع دالة سیء(): صحیح:
    بينما صواب:
    نهاية
نهاية

دالة الرئیسیة:
    سیء()
نهاية
